[package]
name = "doem"
version = "0.1.0"
description = "Generic terminal TODO program"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.25.0"
home = "0.5.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

